--- a/index.html
+++ b/index.html
@@ -160,7 +160,10 @@
 <body>
     <div class="page-container">
         <aside class="sidebar">
-            <h2>Minecraft Tracker</h2>
+            <h2>
+                <img src="https://minecraft.wiki/images/Recovery_Compass_JE1_BE1.gif?c0c26" alt="Recovery Compass" width="50" height="50">
+                <span>Tracker de Items de Minecraft</span>
+            </h2>
 
             <a href="#" class="menu-link" data-category="blocks">
                 <img src="https://minecraft.wiki/images/Blocks_preview.png?b6099" alt="Blocks">
